--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,37 @@
 @import "tailwindcss";
+@plugin './hero.ts';
+@source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
+@custom-variant dark (&:is(.dark *));
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* Reset default styles */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+/* Light mode */
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /* gradient light background */
+  @apply bg-linear-to-b from-blue-500 to-blue-200 text-gray-900;
+}
+
+/* Dark mode */
+.dark {
+  @apply bg-gray-900 text-white;
+}
+
+/* Element styles */
+h1 {
+  @apply text-2xl font-bold text-center py-2 px-4;
+}
+
+h2 {
+  @apply text-lg font-medium text-center py-2 px-4;
+}
+
+
+/* Custom styles */
+.btn {
+  @apply bg-white hover:bg-white/70 transition-all duration-300 text-gray-900 px-4 py-2 rounded-md;
 }
