--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @plugin './hero.ts';
-@source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
+@source '../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
 @custom-variant dark (&:is(.dark *));
 
 /* Reset default styles */
@@ -28,10 +28,4 @@ h1 {
 
 h2 {
   @apply text-lg font-medium text-center py-2 px-4;
-}
-
-
-/* Custom styles */
-.btn {
-  @apply bg-white hover:bg-white/70 transition-all duration-300 text-gray-900 px-4 py-2 rounded-md;
 }
